# cargo-workspace-dependency-checker

./: Cargo.toml  README.md
src/: cargo_toml.rs  config.rs  main.rs
